--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,107 @@
 @import "tailwindcss";
+@import "tw-animate-css";
+
+@custom-variant dark (&:is(.dark *));
 
 @theme {
-  --font-sans: var(--font-geist-sans), ui-sans-serif, system-ui, sans-serif,
+  --font-heading:
+    var(--font-lexend-deca), ui-serif, Georgia, Cambria, "Times New Roman",
+    Times, serif;
+  --font-sans:
+    var(--font-readex-pro), ui-sans-serif, system-ui, sans-serif,
     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+
+@theme inline {
+  --radius-sm: calc(var(--radius) - 4px);
+  --radius-md: calc(var(--radius) - 2px);
+  --radius-lg: var(--radius);
+  --radius-xl: calc(var(--radius) + 4px);
+  --color-background: var(--background);
+  --color-foreground: var(--foreground);
+  --color-card: var(--card);
+  --color-card-foreground: var(--card-foreground);
+  --color-popover: var(--popover);
+  --color-popover-foreground: var(--popover-foreground);
+  --color-primary: var(--primary);
+  --color-primary-foreground: var(--primary-foreground);
+  --color-secondary: var(--secondary);
+  --color-secondary-foreground: var(--secondary-foreground);
+  --color-muted: var(--muted);
+  --color-muted-foreground: var(--muted-foreground);
+  --color-accent: var(--accent);
+  --color-accent-foreground: var(--accent-foreground);
+  --color-destructive: var(--destructive);
+  --color-border: var(--border);
+  --color-input: var(--input);
+  --color-ring: var(--ring);
+  --color-chart-1: var(--chart-1);
+  --color-chart-2: var(--chart-2);
+  --color-chart-3: var(--chart-3);
+  --color-chart-4: var(--chart-4);
+  --color-chart-5: var(--chart-5);
+  --color-sidebar: var(--sidebar);
+  --color-sidebar-foreground: var(--sidebar-foreground);
+  --color-sidebar-primary: var(--sidebar-primary);
+  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
+  --color-sidebar-accent: var(--sidebar-accent);
+  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
+  --color-sidebar-border: var(--sidebar-border);
+  --color-sidebar-ring: var(--sidebar-ring);
+}
+
+@layer base {
+  :root {
+    --background: oklch(93.52% 0.024 315.47);
+    --foreground: oklch(18.68% 0.047 312.01);
+    --card: oklch(93.52% 0.024 315.47);
+    --card-foreground: oklch(18.68% 0.047 312.01);
+    --popover: oklch(93.52% 0.024 315.47);
+    --popover-foreground: oklch(18.68% 0.047 312.01);
+    --primary: oklch(63.13% 0.231 307.83);
+    --primary-foreground: oklch(18.68% 0.047 312.01);
+    --secondary: oklch(68.95% 0.102 317.18);
+    --secondary-foreground: oklch(18.68% 0.047 312.01);
+    --muted: oklch(29.38% 0.084 313.87);
+    --muted-foreground: oklch(71.66% 0.114 312.46);
+    --accent: oklch(64.11% 0.15 57.96);
+    --accent-foreground: oklch(18.68% 0.047 312.01);
+    --destructive: oklch(0.64 0.2102 25.49);
+    --destructive-foreground: oklch(18.68% 0.047 312.01);
+    --border: oklch(29.38% 0.084 313.87);
+    --input: oklch(29.38% 0.084 313.87);
+    --ring: oklch(60.84% 0.142 57.94);
+    --radius: 0.625rem;
+  }
+
+  .dark {
+    --background: oklch(16.93% 0.036 314.62);
+    --foreground: oklch(91.52% 0.033 313.5);
+    --card: oklch(16.93% 0.036 314.62);
+    --card-foreground: oklch(91.52% 0.033 313.5);
+    --popover: oklch(16.93% 0.036 314.62);
+    --popover-foreground: oklch(91.52% 0.033 313.5);
+    --primary: oklch(42.53% 0.215 303.28);
+    --primary-foreground: oklch(91.52% 0.033 313.5);
+    --secondary: oklch(43.28% 0.111 317.52);
+    --secondary-foreground: oklch(91.52% 0.033 313.5);
+    --muted: oklch(81.62% 0.069 315.01);
+    --muted-foreground: 278 48% 91%;
+    --accent: oklch(75.07% 0.155 62.43);
+    --accent-foreground: oklch(16.93% 0.036 314.62);
+    --destructive: oklch(0.39 0.1297 25.57);
+    --destructive-foreground: oklch(19.63% 0.052 312.04);
+    --border: oklch(63.13% 0.145 314.09);
+    --input: oklch(81.62% 0.069 315.01);
+    --ring: oklch(76.51% 0.147 63.7);
+  }
+}
+
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
 }
